Move to bwo/monads.
...and some tidying while we're at it.